Unit tests rework part 2