@@ -1,3 +1,3 @@
 #!/bin/bash
 . /opt/vbr_env
-java -jar --enable-preview /opt/volleyball-referee-api-3.2.jar
+java -jar /opt/volleyball-referee-api-3.2.jar
